--- a/USIT2020Stundenpläne/USIT2020Stundenpläne.csproj
+++ b/USIT2020Stundenpläne/USIT2020Stundenpläne.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>IBBStundenpläne</RootNamespace>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Copyright>Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)</Copyright>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
